<resources>

    <string name="app_name">Secure My World</string>
    <string name="image_border">Image Border</string>
    <string name="user_image">User Image</string>
    <string name="facebook_application_id">371196986580643</string>
    <string name="edit_image_icon">Edit image icon</string>
    <string name="button_analyze">Analyze</string>
    <string name="button_analyze_text">Analyze</string>
    <string name="action_settings">Settings</string>
    <string name="image_subscription_key">0a0cb9836d81462ba8e3c9fdb7ccf3e8</string>
    <string name="emotion_subscription_key">052e09edf3824caebab34dcfd2b58df4</string>
    <string name="face_subscription_key">184c93c3b8f64bec82d0367f9edba78b</string>
    <string name="image_analysis_result">Image Analysis</string>
    <string name="edit_user_profile">Edit User Profile</string>
    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="unknown_sign_in_response">Unknown Sign In Response</string>
    <string name="delete_user_account">Delete Account</string>
    <string name="feedback_name">Name: </string>
    <string name="feedback_email">Email: </string>
    <string name="sex_type">Sex</string>
    <string name="user_profile_title">Edit User Profile</string>
    <string name="user_profile_email">Email ID:</string>
    <string name="user_profile_address">Address</string>
    <string name="send_edit_user_profile">Update User Profile</string>
    <string name="user_emergency_mobile_number">Emergency Contact Number</string>
    <string name="user_profile_name_user_name">Name</string>
    <string name="destination_hint">Please Enter Address</string>
    <string name="powered_by_google_text">Address Search Powered By Google</string>
    <string name="selected_place">Selected Place:</string>
    <string name="address">Address:</string>
    <string name="sex">Sex</string>
    <string name="google_maps_key">AIzaSyDJoWYI5tnHc7csqcJk-1WtGT3wWXbjqxo</string>
    <string name="sex_type_1">Male</string>
    <string name="sex_type_2">Female</string>
    <string name="neutral_option">I don\'t want to provide this info</string>
    <string name="please_select">Please Select</string>
    <string name="button_logout">Logout</string>
    <string name="button_logout_text">Logout</string>
    <string name="button_user_edit_text">Edit Profile</string>
    <string name="button_edit_profile_text">Edit Profile</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_delete_account_text">Delete Acc</string>

</resources>