<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/edit_user_profile_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/user_profile_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/user_profile_title"
            android:textAlignment="center"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/user_email_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/user_profile_email"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/name_hint" />

        <EditText
            android:id="@+id/edit_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="-8dp"
            android:hint="@string/user_profile_name_user_name" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_emergency_mobile_number" />

        <EditText
            android:id="@+id/edit_user_mobile_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/user_emergency_mobile_number"
            android:inputType="number"
            android:maxLength="10" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sex" />

        <Spinner
            android:id="@+id/spinner_sex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:entries="@array/sex_type_list"
            android:prompt="@string/sex_type" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/user_profile_address" />

        <ImageView
            android:id="@+id/poweredBy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/powered_by_google_text"
            android:src="@drawable/powered_by_google_light"
            android:textAlignment="textEnd" />

        <Button
            android:id="@+id/send_user_profile_response"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_edit_user_profile"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>