<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_profile_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/user_image"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/default_image" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/image_border"
            android:contentDescription="@string/image_border"
            android:padding="0dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:background="@drawable/edit_states"
            android:clickable="true"
            android:contentDescription="@string/user_image"
            android:onClick="captureUserEmotion"
            android:src="@drawable/edit_icon" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_analyze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:contentDescription="@string/button_analyze_text"
        android:padding="4dp"
        android:scaleType="fitXY"
        android:text="@string/button_analyze" />

</LinearLayout>